feat: quote calculator init
