# src/app/api/models.ts
@@ -1,3 +1,4 @@
 export { QuoteDto } from './models/quote-dto';
 export { CreateQuoteRequest } from './models/create-quote-request';
 export { CreateQuoteResponse } from './models/create-quote-response';
+export { GetQuoteResponse } from './models/get-quote-response';
