# src/app/api/models/get-quote-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+import { QuoteDto } from './quote-dto';
+export interface GetQuoteResponse {
+  errorMessage?: null | string;
+  isSuccess?: boolean;
+  quote?: QuoteDto;
+}
