# src/app/api/services/quote.service.ts
@@ -10,6 +10,7 @@ import { map, filter } from 'rxjs/operators';
 
 import { CreateQuoteRequest } from '../models/create-quote-request';
 import { CreateQuoteResponse } from '../models/create-quote-response';
+import { GetQuoteResponse } from '../models/get-quote-response';
 
 @Injectable({
   providedIn: 'root',
@@ -108,6 +109,99 @@ export class QuoteService extends BaseService {
 
     return this.apiQuoteCreateQuotePost$Json$Response(params).pipe(
       map((r: StrictHttpResponse<CreateQuoteResponse>) => r.body as CreateQuoteResponse)
+    );
+  }
+
+  /**
+   * Path part for operation apiQuoteGetQuoteGet
+   */
+  static readonly ApiQuoteGetQuoteGetPath = '/api/Quote/GetQuote';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `apiQuoteGetQuoteGet$Plain()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  apiQuoteGetQuoteGet$Plain$Response(params?: {
+    quoteId?: string;
+
+  }): Observable<StrictHttpResponse<GetQuoteResponse>> {
+
+    const rb = new RequestBuilder(this.rootUrl, QuoteService.ApiQuoteGetQuoteGetPath, 'get');
+    if (params) {
+
+      rb.query('quoteId', params.quoteId, {});
+
+    }
+    return this.http.request(rb.build({
+      responseType: 'text',
+      accept: 'text/plain'
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<GetQuoteResponse>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access to only to the response body.
+   * To access the full response (for headers, for example), `apiQuoteGetQuoteGet$Plain$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  apiQuoteGetQuoteGet$Plain(params?: {
+    quoteId?: string;
+
+  }): Observable<GetQuoteResponse> {
+
+    return this.apiQuoteGetQuoteGet$Plain$Response(params).pipe(
+      map((r: StrictHttpResponse<GetQuoteResponse>) => r.body as GetQuoteResponse)
+    );
+  }
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `apiQuoteGetQuoteGet$Json()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  apiQuoteGetQuoteGet$Json$Response(params?: {
+    quoteId?: string;
+
+  }): Observable<StrictHttpResponse<GetQuoteResponse>> {
+
+    const rb = new RequestBuilder(this.rootUrl, QuoteService.ApiQuoteGetQuoteGetPath, 'get');
+    if (params) {
+
+      rb.query('quoteId', params.quoteId, {});
+
+    }
+    return this.http.request(rb.build({
+      responseType: 'json',
+      accept: 'text/json'
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<GetQuoteResponse>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access to only to the response body.
+   * To access the full response (for headers, for example), `apiQuoteGetQuoteGet$Json$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  apiQuoteGetQuoteGet$Json(params?: {
+    quoteId?: string;
+
+  }): Observable<GetQuoteResponse> {
+
+    return this.apiQuoteGetQuoteGet$Json$Response(params).pipe(
+      map((r: StrictHttpResponse<GetQuoteResponse>) => r.body as GetQuoteResponse)
     );
   }
 
